# dalicpp

./: CMakeLists.txt  LICENSE
Config/: dependencies.windows.cmake
Config/Tests/: CMakeLists.txt
Include/Dali/: Component.hpp  Dali.hpp  HBox.hpp  Label.hpp  Mouseable.hpp  Props.hpp
Source/Tests/: scratch.cpp
